Resolvido problema de recursão para a busca de pdf