@@ -17,96 +17,101 @@ import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
+import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 public class InputDomain implements ValidateDataFormat {
 
-    private static final Set<String> visitedUrls = new HashSet<>();
-    private static final Set<String> visitedArchives = new HashSet<>();
-    private static final ExecutorService threadPool = Executors.newFixedThreadPool(10); // Limite de 5 threads
+    private static final Set<String> visitedUrls = Collections.synchronizedSet(new HashSet<>());
+    private static final List<String> visitedArchives = Collections.synchronizedList(new ArrayList<>());
+    private static final ExecutorService threadPool = Executors.newFixedThreadPool(10); // Limite de 10 threads
 
     private static final int MAX_DEPTH = 4;
 
-    public static void main(String[] args) throws UnsupportedEncodingException {
+    public static void main(String[] args) {
         String domain = "https://ifc.edu.br"; // Substitua pelo domínio do site que você deseja vasculhar
         try {
             List<String> listadepdf = InvetorDataSensetive(domain, 0);
             threadPool.shutdown();
-            System.out.println("tamanho??: "+listadepdf.size());
+            System.out.println("Total de arquivos encontrados: " + listadepdf.size());
             for (String content : listadepdf) {
-                System.out.println("PRINTANDO: "+content);
+                System.out.println("Arquivo encontrado: " + content);
             }
-        }catch (UnsupportedEncodingException e){
-            System.out.println("NAO PROCESSO PQQ: "+e.getMessage());
+        } catch (UnsupportedEncodingException | InterruptedException e) {
+            System.out.println("Erro no processamento: " + e.getMessage());
         }
     }
 
-    private static List<String> InvetorDataSensetive(String domain, int depth) throws UnsupportedEncodingException {
-        List<String> dadosColetados = new ArrayList<>();
-        if (depth > MAX_DEPTH || visitedUrls.contains(domain)) {
-            return List.of(new String[0]); //dadosColetados;//
+    private static List<String> FounderPDF(String domain, int depth) throws UnsupportedEncodingException, InterruptedException {
+        if (depth > MAX_DEPTH || !visitedUrls.add(domain)) {
+            return Collections.emptyList();
         }
 
-
-        visitedUrls.add(domain);
-
         try {
-            URI urlURI = new URI(domain); // ver a partir daqui o problema da iteração ##
+            URI urlURI = new URI(domain);
             String url = urlURI.toASCIIString();
             HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
             connection.setRequestMethod("GET");
             connection.setRequestProperty("User-Agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3");
 
-            // Verificar se a resposta foi bem sucedida
             if (connection.getResponseCode() == HttpURLConnection.HTTP_OK) {
-                // Ler a resposta da conexão
-                BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-                StringBuilder response = new StringBuilder();
-                String inputLine;
-                while ((inputLine = in.readLine()) != null) {
-                    response.append(inputLine);
-                }
-                in.close();
-
-                // Criar um documento Jsoup a partir do conteúdo da resposta
-                Document doc = Jsoup.parse(response.toString());
+                Document doc = Jsoup.parse(connection.getInputStream(), null, url);
                 Elements links = doc.select("a[href]");
 
                 for (Element link : links) {
                     String href = link.attr("abs:href");
-                    if ((ValidateDataFormat.isPDF(href) || ValidateDataFormat.isImage(href) && href.contains(domain.replaceAll("https?://","")))) {
+                    if (ValidateDataFormat.isPDF(href) || (ValidateDataFormat.isImage(href) && href.contains(domain.replaceAll("https?://", "")))) {
                         if (!visitedArchives.contains(href)) {
+                            System.out.println("AGAREF:"+href);
                             visitedArchives.add(href);
-                            threadPool.submit(() -> dadosColetados.add(processArchive(href)));
-                            Thread.sleep(10); // Adiciona um pequeno atraso
                         }
-                    } else if (href.startsWith(String.valueOf(url))) {
-                        InvetorDataSensetive(href, depth + 1);
+                    } else if (href.startsWith(url)) {
+                        FounderPDF(href, depth + 1);
                     }
                 }
             } else {
-                // Tratar o caso em que a conexão não foi bem sucedida
                 System.out.println("Falha ao conectar à URL: " + url);
             }
-        } catch (IOException | URISyntaxException | InterruptedException e) {
-            logError("Error while processing URL: " + domain, e);
+        } catch (IOException | URISyntaxException e) {
+            logError("Erro ao processar a URL: " + domain, e);
         }
+
+        return new ArrayList<>(visitedArchives);
+    }
+
+    private static List<String> InvetorDataSensetive(String domain, int depth) throws UnsupportedEncodingException, InterruptedException {
+        List<String> processarArquivos = FounderPDF(domain, depth);
+        List<String> dadosColetados = Collections.synchronizedList(new ArrayList<>());
+
+        CountDownLatch latch = new CountDownLatch(processarArquivos.size());
+        for (String href : processarArquivos) {
+            threadPool.submit(() -> {
+                try {
+                    String resultado = processArchive(href);
+                    if (!resultado.isEmpty()) {
+                        dadosColetados.add(resultado);
+                    }
+                } finally {
+                    latch.countDown();
+                }
+            });
+        }
+        latch.await();
         return dadosColetados;
     }
 
     private static String processArchive(String href) {
         try {
             ArquivoBase arquivoBase = new ArquivoBase(Objects.requireNonNull(downloadArchive(href)), "", href);
-            if(arquivoBase.arquivo.canExecute()) {
+            if (arquivoBase.arquivo.canExecute()) {
                 SensitiveDataFinder sensitiveDataFinder = new SensitiveDataFinder(arquivoBase);
                 String resultado = sensitiveDataFinder.resultado;
-                System.out.println("====> " + resultado);
                 sensitiveDataFinder.close();
                 return resultado;
             }
         } catch (Exception e) {
-            logError("Error while processing archive: " + href, e);
+            logError("Erro ao processar o arquivo: " + href, e);
         }
         return "";
     }
@@ -118,7 +123,7 @@ public class InputDomain implements ValidateDataFormat {
             Files.write(tempFilePath, fileBytes);
             return tempFilePath.toFile();
         } catch (IOException e) {
-            logError("Error while downloading archive: " + url, e);
+            logError("Erro ao baixar o arquivo: " + url, e);
             return null;
         }
     }
